--- a/sdk/dango/biome.json
+++ b/sdk/dango/biome.json
@@ -1,4 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "extends": ["@left-curve/config/biome/common"]
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "extends": ["@left-curve/config/biome/common.json"]
 }
