--- a/sdk/grug/biome.json
+++ b/sdk/grug/biome.json
@@ -1,4 +1,29 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "extends": ["@left-curve/config/biome/common"]
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "extends": ["@left-curve/config/biome/common.json"],
+  "linter": {
+    "rules": {
+      "correctness": {
+        "noUnusedVariables": {
+          "level": "warn",
+          "options": {
+            "ignoreRestSiblings": true
+          }
+        }
+      }
+    }
+  },
+  "overrides": [
+    {
+      "includes": ["src/chains/definitions/**/*.ts"],
+      "linter": {
+        "rules": {
+          "suspicious": {
+            "noTemplateCurlyInString": "off"
+          }
+        }
+      }
+    }
+  ]
 }
