--- a/ui/portal/web/biome.json
+++ b/ui/portal/web/biome.json
@@ -1,6 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
-  "extends": ["@left-curve/config/biome/common"],
+  "root": false,
+  "$schema": "https://biomejs.dev/schemas/2.1.3/schema.json",
+  "extends": ["@left-curve/config/biome/common.json"],
   "linter": {
     "rules": {
       "a11y": {
