feat: cache candle queries

--- a/ui/portal/web/biome.json
+++ b/ui/portal/web/biome.json
@@ -5,6 +5,7 @@
   "linter": {
     "rules": {
       "a11y": {
+        "noStaticElementInteractions": "off",
         "noSvgWithoutTitle": "off",
         "useKeyWithClickEvents": "off"
       }
