--- a/grug/math/Cargo.toml
+++ b/grug/math/Cargo.toml
@@ -10,11 +10,13 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
-bnum      = { workspace = true, features = ["borsh"] }
-borsh     = { workspace = true, features = ["de_strict_order", "derive"] }
-paste     = { workspace = true }
-serde     = { workspace = true, features = ["derive"] }
-thiserror = { workspace = true }
+bnum            = { workspace = true, features = ["borsh"] }
+borsh           = { workspace = true, features = ["de_strict_order", "derive"] }
+grug-macros     = { workspace = true }
+grug-types-base = { workspace = true }
+paste           = { workspace = true }
+serde           = { workspace = true, features = ["derive"] }
+thiserror       = { workspace = true }
 
 [dev-dependencies]
 proptest   = { workspace = true }
