--- a/grug/vm/wasm/Cargo.toml
+++ b/grug/vm/wasm/Cargo.toml
@@ -19,8 +19,10 @@ clru               = { workspace = true }
 data-encoding      = { workspace = true }
 grug-app           = { workspace = true }
 grug-crypto        = { workspace = true }
+grug-macros        = { workspace = true }
 grug-testing       = { workspace = true, optional = true }
 grug-types         = { workspace = true }
+grug-types-base    = { workspace = true }
 serde              = { workspace = true }
 thiserror          = { workspace = true }
 tracing            = { workspace = true }
