--- a/grug/types-base/Cargo.toml
+++ b/grug/types-base/Cargo.toml
@@ -11,7 +11,9 @@ version       = { workspace = true }
 
 [dependencies]
 anyhow      = { workspace = true }
+borsh       = { workspace = true }
 grug-macros = { workspace = true }
+serde       = { workspace = true }
 
 [dev-dependencies]
 thiserror = { workspace = true }
