--- a/grug/db/memory/Cargo.toml
+++ b/grug/db/memory/Cargo.toml
@@ -10,9 +10,10 @@ rust-version  = { workspace = true }
 version       = { workspace = true }
 
 [dependencies]
-grug-app   = { workspace = true }
-grug-jmt   = { workspace = true }
-grug-types = { workspace = true }
-thiserror  = { workspace = true }
+grug-app    = { workspace = true }
+grug-jmt    = { workspace = true }
+grug-macros = { workspace = true }
+grug-types  = { workspace = true }
+thiserror   = { workspace = true }
 
 [dev-dependencies]
