--- a/grug/vm/hybrid/Cargo.toml
+++ b/grug/vm/hybrid/Cargo.toml
@@ -11,6 +11,7 @@ version       = { workspace = true }
 
 [dependencies]
 grug-app     = { workspace = true }
+grug-macros  = { workspace = true }
 grug-types   = { workspace = true }
 grug-vm-rust = { workspace = true }
 grug-vm-wasm = { workspace = true }
