--- a/grug/vm/rust/Cargo.toml
+++ b/grug/vm/rust/Cargo.toml
@@ -13,6 +13,7 @@ version       = { workspace = true }
 elsa        = { workspace = true }
 grug-app    = { workspace = true }
 grug-crypto = { workspace = true }
+grug-macros = { workspace = true }
 grug-types  = { workspace = true }
 serde       = { workspace = true }
 thiserror   = { workspace = true }
