--- a/networks/localdango/docker-compose.yml
+++ b/networks/localdango/docker-compose.yml
@@ -14,13 +14,13 @@ services:
       - 127.0.0.1:${POSTGRES_PORT:-5432}:5432
     volumes:
       - db_data:/var/lib/postgresql/data
-      # For when we'll need an init script ran at initialization
-      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./configs/psql/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_HOST_AUTH_METHOD=trust
       - POSTGRES_DB=grug_dev
     tty: true
+    command: ["postgres", "-c", "shared_preload_libraries=pg_stat_statements"]
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -h localhost -p 5432 -U postgres"]
       interval: 2s
