--- a/deploy/roles/prometheus/defaults/main.yml
+++ b/deploy/roles/prometheus/defaults/main.yml
@@ -3,3 +3,4 @@ prometheus_dir: "{{ ansible_env.HOME }}/prometheus"
 prometheus_port: 9091
 prometheus_retention: "30d"
 alertmanager_port: 9093
+victoriametrics_port: 8428
