--- a/deploy/roles/prometheus/templates/docker-compose.yml
+++ b/deploy/roles/prometheus/templates/docker-compose.yml
@@ -7,8 +7,14 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
-      - '--web.enable-lifecycle'
       - '--storage.tsdb.retention.time={{ prometheus_retention }}'
+      - '--storage.tsdb.retention.size=20GB'      # cap on disk+RAM index
+      - '--storage.tsdb.wal-compression'          # compress in-RAM WAL buffers
+      - '--storage.tsdb.min-block-duration=2h'    # smaller head blocks
+      - '--storage.tsdb.max-block-duration=8h'
+      - '--storage.tsdb.chunk-target-size=512KiB' # smaller in-RAM chunks
+      - '--web.enable-lifecycle'
+      - '--remote.write.url=http://victoriametrics:8428/api/v1/write'
     ports:
       - "{{ tailscale_ip }}:{{ prometheus_port }}:9090"
     volumes:
@@ -20,6 +26,22 @@ services:
       - alertmanager
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  victoriametrics:
+    image: victoriametrics/victoria-metrics
+    ports:
+      - "{{ tailscale_ip }}:{{ victoriametrics_port }}:8428"
+    volumes:
+      - ./victoria-metrics-data:/victoria-metrics-data
+    command:
+      - -storageDataPath=/victoria-metrics-data
+      - -retentionPeriod=365
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget","--no-verbose","--tries=1","--spider","http://localhost:8428/health"]
       interval: 30s
       timeout: 10s
       retries: 3
