Set max usage for dango clickhouse

--- a/deploy/roles/node-exporter/templates/docker-compose.yml
+++ b/deploy/roles/node-exporter/templates/docker-compose.yml
@@ -14,3 +14,8 @@ services:
       - /sys:/host/sys:ro
       - /:/rootfs:ro
     restart: unless-stopped
+
+networks:
+  default:
+    name: monitoring
+    external: true
