--- a/deploy/roles/grafana/templates/datasources.yml
+++ b/deploy/roles/grafana/templates/datasources.yml
@@ -1,11 +1,18 @@
 apiVersion: 1
 
 datasources:
+  - name: VictoriaMetrics
+    type: prometheus
+    access: proxy
+    url: http://victoriametrics:8428
+    isDefault: true
+    editable: true
+
   - name: Prometheus
     type: prometheus
     access: proxy
     url: http://prometheus-prometheus-1:9090
-    isDefault: true
+    isDefault: false
     editable: true
 
   - name: Loki
