--- a/deploy/roles/prometheus/templates/prometheus.yml
+++ b/deploy/roles/prometheus/templates/prometheus.yml
@@ -11,6 +11,12 @@ alerting:
         - targets:
           - alertmanager:9093
 
+remote_write:
+  - url: http://victoriametrics:8428/api/v1/write
+    queue_config:
+      max_samples_per_send: 10000
+      batch_send_deadline: 5s
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
