--- a/deploy/roles/prometheus/templates/docker-compose.yml
+++ b/deploy/roles/prometheus/templates/docker-compose.yml
@@ -7,8 +7,12 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
-      - '--web.enable-lifecycle'
       - '--storage.tsdb.retention.time={{ prometheus_retention }}'
+      - '--storage.tsdb.retention.size=20GB'      # cap on disk+RAM index
+      - '--storage.tsdb.wal-compression'          # compress in-RAM WAL buffers
+      - '--storage.tsdb.min-block-duration=2h'    # smaller head blocks
+      - '--storage.tsdb.max-block-duration=8h'
+      - '--web.enable-lifecycle'
     ports:
       - "{{ tailscale_ip }}:{{ prometheus_port }}:9090"
     volumes:
@@ -19,7 +23,23 @@ services:
     depends_on:
       - alertmanager
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9090/-/healthy"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:9090/-/healthy"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  victoriametrics:
+    image: victoriametrics/victoria-metrics
+    ports:
+      - "{{ tailscale_ip }}:{{ victoriametrics_port }}:8428"
+    volumes:
+      - ./victoria-metrics-data:/victoria-metrics-data
+    command:
+      - -storageDataPath=/victoria-metrics-data
+      - -retentionPeriod=365
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "wget","--no-verbose","--tries=1","--spider","http://127.0.0.1:8428/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -37,7 +57,7 @@ services:
       - ./alertmanager-data:/alertmanager
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9093/-/healthy"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://127.0.0.1:9093/-/healthy"]
       interval: 30s
       timeout: 10s
       retries: 3
