--- a/deploy/requirements.yml
+++ b/deploy/requirements.yml
@@ -10,3 +10,5 @@ roles:
   - name: MonolithProjects.github_actions_runner
     src: MonolithProjects.github_actions_runner
     version: "1.18.7"
+  - name: geerlingguy.swap
+    version: "1.3.0"
