--- a/deploy/roles/node-exporter/tasks/main.yml
+++ b/deploy/roles/node-exporter/tasks/main.yml
@@ -15,9 +15,15 @@
       loop:
         - { src: "{{ playbook_dir }}/roles/node-exporter/templates/docker-compose.yml", dest: "{{ node_exporter_dir }}/docker-compose.yml" }
 
+- name: Ensure monitoring network exists
+  community.docker.docker_network:
+    name: "monitoring"
+
 - name: Launch Node Exporter
   community.docker.docker_compose_v2:
     project_src: "{{ node_exporter_dir }}"
     pull: missing
     state: present
     recreate: always
+
+
