--- a/deploy/roles/postgres/tasks/main.yml
+++ b/deploy/roles/postgres/tasks/main.yml
@@ -37,12 +37,18 @@
     - postgresql.conf
     - init.sql
 
+- name: Create postgres network
+  docker_network:
+    name: postgres
+
 - name: Deploy postgres container
   docker_container:
     name: "{{ container_name }}"
     image: "postgres:{{ psql_version }}"
     restart_policy: unless-stopped
     state: started
+    networks:
+      - name: postgres
     env:
       POSTGRES_USER: "{{ lookup('env','DB_USER', default='postgres') }}"
       POSTGRES_PASSWORD: "{{ db_password }}"
@@ -58,3 +64,23 @@
       interval: 2s
       timeout: 5s
       retries: 10
+
+- name: Deploy postgres exporter
+  docker_container:
+    name: postgres-exporter
+    image: prometheuscommunity/postgres-exporter:latest
+    restart_policy: unless-stopped
+    state: started
+    networks:
+      - name: postgres
+    env:
+      DATA_SOURCE_URI: "{{ container_name }}:5432/postgres?sslmode=disable"
+      DATA_SOURCE_USER: "{{ lookup('env','DB_USER', default='postgres') }}"
+      DATA_SOURCE_PASS: "{{ db_password }}"
+    ports:
+      - "{{ tailscale_ip }}:9187:9187"
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9187/metrics"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
