--- a/deploy/roles/postgres/files/postgresql.conf
+++ b/deploy/roles/postgres/files/postgresql.conf
@@ -4,9 +4,9 @@
 shared_preload_libraries = 'pg_stat_statements'
 
 # Memory Settings
-shared_buffers = 16GB                    # (default: 128MB) - 125x increase
+shared_buffers = 8GB                     # (default: 128MB)
 effective_cache_size = 64GB              # (default: 4GB) - 16x increase
-work_mem = 64MB                          # (default: 4MB) - 16x increase
+work_mem = 32MB                          # (default: 4MB)
 maintenance_work_mem = 1GB               # (default: 64MB) - 16x increase
 
 # Connection Settings
@@ -19,10 +19,11 @@ max_parallel_workers_per_gather = 4     # (default: 2) - 2x increase
 max_parallel_maintenance_workers = 4    # (default: 2) - 2x increase
 
 # WAL Settings
-wal_buffers = 16MB                       # (default: 3% of shared_buffers, ~4MB)
+wal_buffers = 64MB                       # (default: 3% of shared_buffers, ~4MB)
 min_wal_size = 1GB                       # (default: 80MB) - 12x increase
 max_wal_size = 4GB                       # (default: 1GB) - 4x increase
 checkpoint_completion_target = 0.9       # (default: 0.5) - smoother checkpoints
+checkpoint_timeout = 15min
 
 # Storage Settings (SSD optimized)
 random_page_cost = 1.1                   # (default: 4.0) - SSD optimization
@@ -31,3 +32,6 @@ effective_io_concurrency = 200          # (default: 1) - SSD optimization
 # Monitoring
 log_min_duration_statement = 1000       # (default: -1 disabled) - log slow queries
 default_statistics_target = 100         # (default: 100) - unchanged
+
+log_checkpoints = on
+log_lock_waits = on
