Add new runners

--- a/deploy/justfile
+++ b/deploy/justfile
@@ -17,10 +17,9 @@ setup:
   source .venv/bin/activate && pip install ansible
   source .venv/bin/activate && ansible-galaxy collection install -r requirements.yml
 
-# Run the github runner installation playbooks
-install-runners:
-  source .venv/bin/activate && ansible-playbook setup-github-runner-hosts.yml
-  source .venv/bin/activate && ansible-playbook install-github-runner-hosts.yml
+deploy-github-runners:
+  ansible-playbook setup-github-runner-hosts.yml
+  ansible-playbook install-github-runner-hosts.yml
 
 deploy-bots:
   ansible-playbook bots.yml
