--- a/deploy/roles/prometheus/templates/prometheus.yml
+++ b/deploy/roles/prometheus/templates/prometheus.yml
@@ -40,6 +40,11 @@ scrape_configs:
         - 'ovh5:9100'
         - 'ovh6:9100'
         - 'ovh7:9100'
+    relabel_configs:
+    - source_labels: [__address__]
+      regex: 'node-exporter:9100'
+      target_label: instance
+      replacement: 'ovh3:9100'
 
   - job_name: 'clickhouse'
     static_configs:
