--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -76,8 +76,9 @@ jobs:
         run: rustup run nightly cargo fmt --check --all
 
   check-graphql-schema:
-    name: Check GraphQL schema changes
+    name: Check GraphQL schema
     runs-on: [self-hosted]
+    needs: [format]
     steps:
       - name: Checkout sources
         uses: actions/checkout@v4
@@ -122,29 +123,6 @@ jobs:
             cargo clippy -p "$crate" --bins --tests --benches --examples --no-default-features --all-targets -- -D warnings
           done
 
-  build-test-artifacts:
-    needs: [format]
-    name: Build test artifacts
-    runs-on: self-hosted
-    timeout-minutes: 15
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          ref: ${{ github.head_ref || github.ref }}
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-      - name: Install nextest
-        uses: taiki-e/install-action@nextest
-      - name: Build and archive tests
-        run: cargo nextest archive --archive-file nextest-archive.tar.zst
-      - name: Upload archive to workflow
-        uses: actions/upload-artifact@v4
-        with:
-          name: nextest-archive
-          path: nextest-archive.tar.zst
-
   run-tests-partitioned:
     needs: [build-test-artifacts]
     name: Test (${{ matrix.partition }})
@@ -157,8 +135,8 @@ jobs:
       PGDATABASE: grug_test
       DB_HOST: postgres
       CLICKHOUSE_HOST: localhost
-      CLICKHOUSE_PORT: 10123
-      POSTGRES_PORT: 6432
+      CLICKHOUSE_PORT: ${{ (github.run_id % 1000) * 10 + 20000 + matrix.partition }}
+      POSTGRES_PORT: ${{ (github.run_id % 1000) * 10 + 30000 + matrix.partition }}
       CLICKHOUSE_DATABASE: grug_test
       CLICKHOUSE_USER: default
     services:
@@ -167,7 +145,7 @@ jobs:
         env:
           POSTGRES_PASSWORD: postgres
         ports:
-          - 127.0.0.1:6432:5432
+          - 127.0.0.1:{{ env.POSTGRES_PORT }}:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -180,7 +158,7 @@ jobs:
           CLICKHOUSE_USER: default
           CLICKHOUSE_DEFAULT_ACCESS_MANAGEMENT: 1
         ports:
-          - 127.0.0.1:10123:8123
+          - 127.0.0.1:{{ env.CLICKHOUSE_PORT }}:8123
         options: >-
           --health-cmd "clickhouse-client --query 'SELECT 1'"
           --health-interval 5s
@@ -191,20 +169,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref || github.ref }}
-      # In this example, the Rust toolchain is not installed. cargo nextest's run phase does not
-      # require Cargo. You can choose to install Rust if your tests require it, of course.
-      # Instead, create ~/.cargo/bin as required by the install action.
-      - run: mkdir -p ~/.cargo/bin
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
       - name: Install nextest
         uses: taiki-e/install-action@nextest
-      - name: Download archive
-        uses: actions/download-artifact@v4
-        with:
-          name: nextest-archive
       - name: Run tests
         run: |
-          ~/.cargo/bin/cargo-nextest nextest run --archive-file nextest-archive.tar.zst \
-            --partition count:${{ matrix.partition }}/2
+          ~/.cargo/bin/cargo-nextest nextest run --all-features --partition count:${{ matrix.partition }}/2
 
   build:
     timeout-minutes: 20
@@ -335,6 +308,7 @@ jobs:
           docker run --rm ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} dango || true
 
   push-manifest:
+    name: Push a multi-arch docker image
     permissions:
       packages: write
     needs: [build]
