feat: add FullPage scrolling animation

--- a/ui/portal/web/package.json
+++ b/ui/portal/web/package.json
@@ -8,6 +8,7 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.45",
     "@inlang/paraglide-js": "2.0.0-beta.30",
     "@left-curve/applets-kit": "workspace:^",
     "@left-curve/chartiq": "^9.8.0",
