Add runner labels

--- a/deploy/install-github-runner-hosts.yml
+++ b/deploy/install-github-runner-hosts.yml
@@ -15,18 +15,22 @@
       vars:
         runner_dir: /opt/actions-runner-1
         runner_name: "{{ hostname }}-1"
+        runner_labels: ["self-hosted", "runner-1"]
     - role: MonolithProjects.github_actions_runner
       vars:
         runner_dir: /opt/actions-runner-2
         runner_name: "{{ hostname }}-2"
+        runner_labels: ["self-hosted", "runner-2"]
     - role: MonolithProjects.github_actions_runner
       vars:
         runner_dir: /opt/actions-runner-3
         runner_name: "{{ hostname }}-3"
+        runner_labels: ["self-hosted", "runner-3"]
     - role: MonolithProjects.github_actions_runner
       vars:
         runner_dir: /opt/actions-runner-4
         runner_name: "{{ hostname }}-4"
+        runner_labels: ["self-hosted", "runner-4"]
 
   tasks:
     - name: Ensure restart policy in GitHub Actions runner service
