--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ ui/config/project.inlang/*
 networks/**/configs/cometbft/config/addrbook.json
 networks/**/configs/cometbft/config/write-file-atomic-*
 networks/**/data
+
+testnet_data
