--- a/deploy/roles/postgres/files/postgresql.conf
+++ b/deploy/roles/postgres/files/postgresql.conf
@@ -4,10 +4,10 @@
 shared_preload_libraries = 'pg_stat_statements'
 
 # Memory Settings
-shared_buffers = 8GB                     # (default: 128MB)
-effective_cache_size = 64GB              # (default: 4GB) - 16x increase
-work_mem = 32MB                          # (default: 4MB)
-maintenance_work_mem = 1GB               # (default: 64MB) - 16x increase
+shared_buffers = 24GB                    # (default: 128MB)
+effective_cache_size = 80GB              # (default: 4GB)
+work_mem = 512MB                         # (default: 4MB)
+maintenance_work_mem = 2GB               # (default: 64MB) - 16x increase
 
 # Connection Settings
 max_connections = 200                    # (default: 100) - 2x increase
