--- a/deploy/roles/loki/templates/loki-config.yml
+++ b/deploy/roles/loki/templates/loki-config.yml
@@ -2,6 +2,10 @@ auth_enabled: false
 
 limits_config:
   reject_old_samples: false  # Allow old entries
+  ingestion_rate_mb: 16        # Increase from 4MB to 16MB/sec
+  ingestion_burst_size_mb: 32  # Burst up to 32MB
+  max_line_size: 256KB         # Increase line size limit
+  max_streams_per_user: 0      # Unlimited streams
   # Or increase window:
   # reject_old_samples_max_age: 720h  # 30 days
 
