--- a/deploy/roles/promtail/templates/promtail-config.yml
+++ b/deploy/roles/promtail/templates/promtail-config.yml
@@ -24,7 +24,12 @@ scrape_configs:
       - host: unix:///var/run/docker.sock
         refresh_interval: 5s
     relabel_configs:
-      - source_labels: [__meta_docker_container_name]
-        target_label: container_name
       - source_labels: [__meta_docker_container_label_com_docker_compose_service]
         target_label: service
+      - target_label: host
+        replacement: "{{ hostname }}"
+      # Clean up container name (remove leading slash)
+      - source_labels: [__meta_docker_container_name]
+        regex: '/(.+)'
+        target_label: container_name
+        replacement: '${1}'
