--- a/dango/client/Cargo.toml
+++ b/dango/client/Cargo.toml
@@ -12,6 +12,7 @@ version       = { workspace = true }
 [dependencies]
 aes-gcm     = { workspace = true, features = ["std"] }
 anyhow      = { workspace = true }
+async-trait = { workspace = true }
 bip32       = { workspace = true }
 dango-types = { workspace = true }
 grug        = { workspace = true }
