--- a/dango/testing/Cargo.toml
+++ b/dango/testing/Cargo.toml
@@ -57,11 +57,14 @@ chrono                      = { workspace = true }
 criterion                   = { workspace = true }
 dango-account-factory       = { workspace = true, features = ["library"] }
 dango-auth                  = { workspace = true }
+dango-bank                  = { workspace = true, features = ["library"] }
+dango-dex                   = { workspace = true, features = ["library"] }
 dango-gateway               = { workspace = true, features = ["library"] }
 dango-httpd                 = { workspace = true, features = ["metrics"] }
 dango-lending               = { workspace = true, features = ["library"] }
 dango-mock-httpd            = { workspace = true }
 dango-oracle                = { workspace = true, features = ["library"] }
+dango-taxman                = { workspace = true, features = ["library"] }
 grug-testing                = { workspace = true }
 hex                         = { workspace = true }
 home                        = { workspace = true }
